--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,9 +1,11 @@
 <header>
-    <p>{{title}}</p>
+    <h1>{{title}}</h1>
     <app-button 
-        color="green" 
-        text="Add Task"
+        color="{{ showAddTask ? 'red' : 'green' }}" 
+        text="{{ showAddTask ? 'Close Task' : 'Add Task' }}"
         (btnClic)="toggleAddTask()"
+        *ngIf="hasRoute('/')"
     >
+    <!-- hasRoute muestra el boton solo si estamos en el inicio ('/') -->
     </app-button>
 </header>
